--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.22",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "typescript": "4.5.5"
   }
 }
