--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-carrousel": "^1.1.0",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
