--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-carrousel": "^1.1.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-is": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-slick": "^0.28.1",
