--- a/main-deploy-work.yml
+++ b/main-deploy-work.yml
@@ -41,4 +41,4 @@ jobs:
           aws s3 cp \
           --recursive \
           --region ap-northeast-2 \
-          build s3://프로젝트 이름
+          build s3://ddangkong
